--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
-numpy==1.19.5
-matplotlib==3.4.2
-pandas==1.2.4
-requests==2.25.1
-selenium==3.141.0
-scipy==1.6.3
-yellowbrick==1.3.post1
-statsmodels==0.12.2
-scikit-learn==0.24.2
+pandas>=1.2.4
 pyjr>=0.1.1
+numpy>=1.22.3
+requests>=2.25.1
+matplotlib>=3.4.2
+scipy>=1.6.3
+setuptools>=57.0.0
